...
		android:id="@+id/lexicaLogo"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/high_score"
		app:layout_constraintBottom_toTopOf="@id/new_game" />

	<mehdi.sakout.fancybuttons.FancyButton
		android:id="@+id/new_game"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:paddingTop="?attr/home__button_padding"
...
			fancy:fb_iconPosition="top"
			fancy:fb_text="@string/restore_game"
			fancy:fb_textColor="?attr/home__secondary_button_text_colour"
			fancy:fb_textSize="18sp" />

		<mehdi.sakout.fancybuttons.FancyButton
			android:id="@+id/preferences"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:paddingTop="?attr/home__button_padding"
			android:paddingBottom="?attr/home__button_padding"
			app:layout_constraintWidth_percent="0.34"
...
