<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="?attr/score__background_colour"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/missed_board_wrapper"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:padding="?attr/game__score__padding"
		android:background="?attr/score__missed_board_background_colour"
		app:layout_constraintHeight_percent="0.4"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<com.andhika185.lexica.view.BoardView
			android:id="@+id/missed_board"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintDimensionRatio="W,1:1"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />

		<include layout="@layout/score_sort_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/words"
		android:layout_width="0dp"
		android:layout_height="0dp"
		tools:listitem="@layout/score_summary_word"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/missed_board_wrapper"
		app:layout_constraintBottom_toBottomOf="parent"
		android:scrollbars="vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>