...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/help"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/help_list"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
...
